@@ -52,15 +52,15 @@ class FarFromMostLimitingElementFilterTest {
 
         // arrange previous Leaf -> most limiting element is in DE/FR
         Leaf previousLeaf = mock(Leaf.class);
-        Mockito.when(previousLeaf.getVirtualCostNames()).thenReturn(Collections.emptySet());
+        Mockito.when(previousLeaf.getOptimizationResult().getVirtualCostNames()).thenReturn(Collections.emptySet());
 
         FarFromMostLimitingElementFilter naFilter;
         Set<NetworkActionCombination> filteredNaCombination;
 
         // test - no border cross, most limiting element is in BE/FR
-        Mockito.when(previousLeaf.getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
+        Mockito.when(previousLeaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
         naFilter = new FarFromMostLimitingElementFilter(NetworkActionCombinationsUtils.NETWORK, true, 0);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(7, filteredNaCombination.size());
         List<NetworkActionCombination> list1 = List.of(IND_FR_2, IND_BE_1, IND_NL_BE, IND_FR_DE, COMB_3_BE, COMB_2_FR_DE_BE, COMB_2_BE_NL);
@@ -68,8 +68,8 @@ class FarFromMostLimitingElementFilterTest {
         list1.forEach(na -> assertTrue(finalFilteredNaCombination.contains(na)));
 
         // test - no border cross, most limiting element is in DE/FR
-        Mockito.when(previousLeaf.getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        Mockito.when(previousLeaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(6, filteredNaCombination.size());
         List<NetworkActionCombination> list2 = List.of(IND_FR_2, IND_DE_1, IND_FR_DE, IND_DE_NL, COMB_2_DE, COMB_2_FR_DE_BE);
@@ -77,9 +77,9 @@ class FarFromMostLimitingElementFilterTest {
         list2.forEach(na -> assertTrue(finalFilteredNaCombination2.contains(na)));
 
         // test - max 1 border cross, most limiting element is in BE
-        Mockito.when(previousLeaf.getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnecBe"))); // be
+        Mockito.when(previousLeaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnecBe"))); // be
         naFilter = new FarFromMostLimitingElementFilter(NetworkActionCombinationsUtils.NETWORK, true, 1);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(9, filteredNaCombination.size());
         List<NetworkActionCombination> list3 = List.of(IND_FR_2, IND_BE_1, IND_NL_1, IND_NL_BE, IND_FR_DE, IND_DE_NL, COMB_3_BE, COMB_2_FR_DE_BE, COMB_2_BE_NL);
@@ -92,32 +92,32 @@ class FarFromMostLimitingElementFilterTest {
         FarFromMostLimitingElementFilter naFilter = new FarFromMostLimitingElementFilter(NetworkActionCombinationsUtils.NETWORK, false, 0);
 
         Leaf leaf = mock(Leaf.class);
-        Mockito.when(leaf.getVirtualCostNames()).thenReturn(Set.of("mnec", "lf"));
+        Mockito.when(leaf.getOptimizationResult().getVirtualCostNames()).thenReturn(Set.of("mnec", "lf"));
 
-        Mockito.when(leaf.getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
-        Mockito.when(leaf.getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
-        Mockito.when(leaf.getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
-        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf));
+        Mockito.when(leaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
+        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf.getOptimizationResult()));
 
-        Mockito.when(leaf.getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
-        Mockito.when(leaf.getCostlyElements(eq("mnec"), anyInt())).thenReturn(Collections.emptyList());
-        Mockito.when(leaf.getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
-        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR)), naFilter.getOptimizedMostLimitingElementsLocation(leaf));
+        Mockito.when(leaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"))); // be fr
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("mnec"), anyInt())).thenReturn(Collections.emptyList());
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
+        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR)), naFilter.getOptimizedMostLimitingElementsLocation(leaf.getOptimizationResult()));
 
-        Mockito.when(leaf.getMostLimitingElements(1)).thenReturn(Collections.emptyList());
-        Mockito.when(leaf.getCostlyElements(eq("mnec"), anyInt())).thenReturn(Collections.emptyList());
-        Mockito.when(leaf.getCostlyElements(eq("lf"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
-        assertEquals(Set.of(Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf));
+        Mockito.when(leaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(Collections.emptyList());
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("mnec"), anyInt())).thenReturn(Collections.emptyList());
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("lf"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // de fr
+        assertEquals(Set.of(Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf.getOptimizationResult()));
 
-        Mockito.when(leaf.getMostLimitingElements(1)).thenReturn(Collections.emptyList());
-        Mockito.when(leaf.getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"), NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // be de fr
-        Mockito.when(leaf.getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
-        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf));
+        Mockito.when(leaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(Collections.emptyList());
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase"), NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase"))); // be de fr
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("lf"), anyInt())).thenReturn(Collections.emptyList());
+        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf.getOptimizationResult()));
 
-        Mockito.when(leaf.getMostLimitingElements(1)).thenReturn(Collections.emptyList());
-        Mockito.when(leaf.getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase")));
-        Mockito.when(leaf.getCostlyElements(eq("lf"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase")));
-        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf));
+        Mockito.when(leaf.getOptimizationResult().getMostLimitingElements(1)).thenReturn(Collections.emptyList());
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("mnec"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec2basecase")));
+        Mockito.when(leaf.getOptimizationResult().getCostlyElements(eq("lf"), anyInt())).thenReturn(List.of(NetworkActionCombinationsUtils.CRAC.getFlowCnec("cnec1basecase")));
+        assertEquals(Set.of(Optional.of(Country.BE), Optional.of(Country.FR), Optional.of(Country.DE)), naFilter.getOptimizedMostLimitingElementsLocation(leaf.getOptimizationResult()));
     }
 
     @Test
