@@ -46,9 +46,9 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // arrange Leaf -> naFr1 and raBe1 have already been activated in previous leaf
         // but only naFr1 should count
         Leaf previousLeaf = Mockito.mock(Leaf.class);
-        Mockito.when(previousLeaf.getActivatedNetworkActions()).thenReturn(Collections.singleton(NA_FR_1));
-        Mockito.when(previousLeaf.getRangeActions()).thenReturn(Collections.singleton(RA_BE_1));
-        Mockito.when(previousLeaf.getOptimizedSetpoint(RA_BE_1, P_STATE)).thenReturn(5.);
+        Mockito.when(previousLeaf.getOptimizationResult().getActivatedNetworkActions()).thenReturn(Collections.singleton(NA_FR_1));
+        Mockito.when(previousLeaf.getOptimizationResult().getRangeActions()).thenReturn(Collections.singleton(RA_BE_1));
+        Mockito.when(previousLeaf.getOptimizationResult().getOptimizedSetpoint(RA_BE_1, P_STATE)).thenReturn(5.);
 
         MaximumNumberOfRemedialActionPerTsoFilter naFilter;
         Set<NetworkActionCombination> filteredNaCombination;
@@ -56,7 +56,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 2 topo in FR and DE
         Map<String, Integer> maxTopoPerTso = Map.of("fr", 2, "be", 2);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, new HashMap<>());
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(6, filteredNaCombination.size()); // 2 combinations filtered
         assertFalse(filteredNaCombination.contains(COMB_2_FR));
@@ -65,7 +65,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 1 topo in FR
         maxTopoPerTso = Map.of("fr", 1);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, new HashMap<>());
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(4, filteredNaCombination.size()); // 4 combinations filtered
         assertTrue(filteredNaCombination.contains(IND_BE_2));
@@ -76,7 +76,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         // filter - max 1 RA in FR and max 2 RA in BE
         Map<String, Integer> maxRaPerTso = Map.of("fr", 1, "be", 2);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(new HashMap<>(), maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(3, filteredNaCombination.size());
         assertTrue(filteredNaCombination.contains(IND_BE_2));
@@ -87,7 +87,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         maxTopoPerTso = Map.of("fr", 2, "nl", 0);
         maxRaPerTso = Map.of("be", 1);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(3, filteredNaCombination.size());
         assertTrue(filteredNaCombination.contains(IND_FR_2));
@@ -98,7 +98,7 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         maxTopoPerTso = Map.of("fr", 10, "nl", 10, "be", 10);
         maxRaPerTso = Map.of("nl", 0);
         naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRaPerTso);
-        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
 
         assertEquals(5, filteredNaCombination.size());
         assertFalse(filteredNaCombination.contains(IND_NL_1));
@@ -129,16 +129,16 @@ class MaximumNumberOfRemedialActionPerTsoFilterTest {
         PstRangeAction raFr2 = createPstRangeActionWithOperator("lineFr2", "fr");
 
         Leaf previousLeaf = Mockito.mock(Leaf.class);
-        Mockito.when(previousLeaf.getActivatedNetworkActions()).thenReturn(Collections.emptySet());
-        Mockito.when(previousLeaf.getActivatedRangeActions(Mockito.any())).thenReturn(Set.of(raFr1, raFr2));
-        Mockito.when(previousLeaf.getOptimizedSetpoint(raFr1, P_STATE)).thenReturn(5.);
-        Mockito.when(previousLeaf.getOptimizedSetpoint(raFr2, P_STATE)).thenReturn(5.);
+        Mockito.when(previousLeaf.getOptimizationResult().getActivatedNetworkActions()).thenReturn(Collections.emptySet());
+        Mockito.when(previousLeaf.getOptimizationResult().getActivatedRangeActions(Mockito.any())).thenReturn(Set.of(raFr1, raFr2));
+        Mockito.when(previousLeaf.getOptimizationResult().getOptimizedSetpoint(raFr1, P_STATE)).thenReturn(5.);
+        Mockito.when(previousLeaf.getOptimizationResult().getOptimizedSetpoint(raFr2, P_STATE)).thenReturn(5.);
 
         Map<String, Integer> maxTopoPerTso = Map.of("fr", 2, "nl", 2);
         Map<String, Integer> maxRemedialActionsPerTso = Map.of("fr", 2, "nl", 5);
 
         MaximumNumberOfRemedialActionPerTsoFilter naFilter = new MaximumNumberOfRemedialActionPerTsoFilter(maxTopoPerTso, maxRemedialActionsPerTso);
-        Set<NetworkActionCombination> filteredNaCombination = naFilter.filter(naCombinations, previousLeaf);
+        Set<NetworkActionCombination> filteredNaCombination = naFilter.filter(naCombinations, previousLeaf.getOptimizationResult());
         assertEquals(0, filteredNaCombination.size()); // combination is filtered out
     }
 }
